--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,14 @@
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
 CLERK_SECRET_KEY=
 
-# Database
-DATABASE_URL="postgresql://user:password@localhost:5432/aura?schema=public"
+# Vercel Postgres Database
+POSTGRES_URL=
+POSTGRES_PRISMA_URL=
+POSTGRES_URL_NON_POOLING=
+POSTGRES_USER=
+POSTGRES_HOST=
+POSTGRES_PASSWORD=
+POSTGRES_DATABASE=
 
 # App Configuration
 NEXT_PUBLIC_APP_URL=http://localhost:3000
